--- a/React_Routing_Hook/src/index.css
+++ b/React_Routing_Hook/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Square {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  color: #374151;
+  border: 1px solid #d2d6dc;
+  font-weight: bold;
+}
+
+.Square:hover {
+  cursor: pointer;
+}
+
+.Board {
+  font-family: sans-serif;
+}
+
+.Row {
+  display: flex;
+}
+
+.Reset {
+  margin-top: 1rem;
+  border: 1px solid #d2d6dc;
+  color: #374151;
+  font-size: 1.25rem;
+  padding: 1rem 4rem;
+  border-radius: 0.5rem;
+  background-color: #fff;
+}
+
+.Reset:hover {
+  cursor: pointer;
+}
+
+.Board {
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
